Fix scrollbar for iOS5

--- a/bin/css/nanoscroller.css
+++ b/bin/css/nanoscroller.css
@@ -24,7 +24,7 @@
   right      : 0;
   top        : 0;
   bottom     : 0;
-  visibility : hidden;
+  visibility : hidden\9;
   opacity    : .01; 
   -webkit-transition    : .2s;
   -moz-transition       : .2s;
@@ -44,6 +44,6 @@
   border-radius         : 3px;
 }
 .nano:hover > .pane, .pane.active {
-  visibility : visible;
+  visibility : visible\9;
   opacity    : 1;
 }
